--- a/src/main/webapp/WEB-INF/views/product/list.html
+++ b/src/main/webapp/WEB-INF/views/product/list.html
@@ -38,6 +38,6 @@
     <span th:text="${products.number + 1}"></span>/<span th:text="${products.totalPages}"></span>
     <a th:href="@{'/products'(page=${products.number + 1})}" th:if="${products.hasNext()}">Trang sau</a>
 </div>
-<footer th:replace="/customer/layout :: footer"></footer>
+<footer th:replace="/product/layout :: footer"></footer>
 </body>
 </html>
